<resources>
    <string name="app_name">PracticalTest01Var03</string>
    <string name="navigate_to_secondary_activity">Navigate to secondary activity</string>
    <string name="rezultat">Rezultat</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="correct">Correct</string>
    <string name="incorect">Incorect</string>
</resources>